objects/GCS_Pre_Chat_Configuration__c.object
<CustomObject>
    <fields>
        <fullName>Company__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Company</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Country</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>English_Name__c</fullName>
        <label>English_Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <defaultValue>false</defaultValue>
        <label>First Name</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Last Name</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Options__c</fullName>
        <label>Options</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Phone</label>
        <type>Checkbox</type>
    </fields>
    <customSettingsType>List</customSettingsType>
    <label>GCS Pre Chat Configuration</label>
</CustomObject>